# Relativistic-Black-Hole

./: CMakeLists.txt  main.cpp  physics.hpp  renderer.hpp
shaders/: raytrace.frag  raytrace.vert  spheres.frag  spheres.vert
